--- a/index.html
+++ b/index.html
@@ -412,12 +412,12 @@
                         <div class="info-value">${student.nom}</div>
                     </div>
                     <div class="info-item">
-                        <div class="info-label">Prénom</div>
+                        <div class="info-label">NE(E) le:</div>
                         <div class="info-value">${student.prenom}</div>
                     </div>
                 </div>
                 <div class="info-item">
-                    <div class="info-label">Classe</div>
+                    <div class="info-label">Statut</div>
                     <div class="info-value">${student.classe}</div>
                 </div>
                 <div class="info-item">
