--- a/test.html
+++ b/test.html
@@ -26,6 +26,12 @@
         <p><strong>Classe :</strong> <span id="s-class">–</span></p>
         <p><strong>Email :</strong> <span id="s-email">–</span></p>
       </div>
+      <div id="left-pane">
+       <button id="connect-camera">Connecter la webcam</button>
+      <video id="video" autoplay muted width="640" height="480"></video>
+      <canvas id="overlay" width="640" height="480"></canvas>
+</div>
+
 
       <button id="connect-arduino">Connecter Arduino</button>
     </div>
