--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
 <script>
 const MODELS_URL = "./models";
-const CSV_URL = "./eleves.csv";
+const CSV_URL = "./students.csv";
 const ASSETS_DIR = "./assets";
 
 const video = document.getElementById("video");
