--- a/index.html
+++ b/index.html
@@ -346,9 +346,9 @@
             try {
                 const MODEL_URL = 'https://cdn.jsdelivr.net/npm/@vladmandic/face-api/model/';
                 
-                await faceapi.ssd_mobilenetv1_model.loadFromUri(MODEL_URL);
-                await faceapi.face_landmark_68_model.loadFromUri(MODEL_URL);
-                await faceapi.face_recognition_model.loadFromUri(MODEL_URL);
+                await faceapi.nets.ssdMobilenetv1.loadFromUri(MODEL_URL), // Détection
+                await faceapi.nets.faceLandmark68Net.loadFromUri(MODEL_URL), // Points du visage
+                await faceapi.nets.faceRecognitionNet.loadFromUri(MODEL_URL) // Reconnaissance (Encodage)
                 
                 console.log('Modeles charges avec succes');
                 modelsLoaded = true;
