--- a/index1.html
+++ b/index1.html
@@ -462,7 +462,7 @@
                                 updateUI(student, true);
                                 
                                 // Dessiner en Vert
-                                const drawBox = new faceapi.draw.DrawBox(box, { label: matchId, boxColor: '#2ecc71' });
+                                const drawBox = new faceapi.draw.DrawBox(box, { label: matchId.nom, boxColor: '#2ecc71' });
                                 drawBox.draw(canvas);
                             } else {
                                 // NON RECONNU
