--- a/index1.html
+++ b/index1.html
@@ -454,6 +454,7 @@
                         results.forEach((result, i) => {
                             const box = resizedDetections[i].detection.box;
                             const matchId = result.label;
+                            const nameId = 
                             
                             // Logique de décision
                             if (matchId !== "unknown") {
@@ -462,7 +463,7 @@
                                 updateUI(student, true);
                                 
                                 // Dessiner en Vert
-                                const drawBox = new faceapi.draw.DrawBox(box, { label: matchId.nom, boxColor: '#2ecc71' });
+                                const drawBox = new faceapi.draw.DrawBox(box, { label: student.nom, boxColor: '#2ecc71' });
                                 drawBox.draw(canvas);
                             } else {
                                 // NON RECONNU
