Change model URL to use public CDN
Updated MODEL_URL to use a public CDN instead of a local folder.

--- a/index1.html
+++ b/index1.html
@@ -304,7 +304,7 @@
         
         // CORRECTION : Utilisation d'un CDN public pour les modèles au lieu du dossier local '/models'
         // Cela permet à l'application de fonctionner sans serveur local configuré pour les modèles.
-        const MODEL_URL = 'https://justadudewhohacks.github.io/face-api.js/models'; 
+        const MODEL_URL = 'https://cdn.jsdelivr.net/npm/@vladmandic/face-api/model/'; 
 
         // Variables globales
         let video = document.getElementById('video');
