Fix typo in face landmark model loading

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
                 const MODEL_URL = 'https://cdn.jsdelivr.net/npm/@vladmandic/face-api/model/';
                 
                 await faceapi.nets.ssd_mobilenetv1_model.loadFromUri(MODEL_URL), // Détection
-                await faceapi.nets.face_landmark68_model.loadFromUri(MODEL_URL), // Points du visage
+                await faceapi.nets.face_landmark_68_model.loadFromUri(MODEL_URL), // Points du visage
                 await faceapi.nets.face_recognition_model.loadFromUri(MODEL_URL) // Reconnaissance (Encodage)
                 
                 console.log('Modeles charges avec succes');
