Update model URL for Face-API loading

--- a/index.html
+++ b/index.html
@@ -344,11 +344,11 @@
         // Charger les modèles Face-API
         async function loadModels() {
             try {
-                const MODEL_URL = 'https://cdn.jsdelivr.net/npm/@vladmandic/face-api/model/';
+                const MODEL_URL = 'https://github.com/justadudewhohacks/face-api.js/tree/master/weights/';
                 
-                await faceapi.nets.ssd_mobilenetv1_model.bin.loadFromUri(MODEL_URL), // Détection
-                await faceapi.nets.face_landmark_68_model.bin.loadFromUri(MODEL_URL), // Points du visage
-                await faceapi.nets.face_recognition_model.bin.loadFromUri(MODEL_URL) // Reconnaissance (Encodage)
+                await faceapi.nets.ssd_mobilenetv1_model-shard1.loadFromUri(MODEL_URL), // Détection
+                await faceapi.nets.face_landmark_68_model-shard1.loadFromUri(MODEL_URL), // Points du visage
+                await faceapi.nets.face_recognition_model-shard1.loadFromUri(MODEL_URL) // Reconnaissance (Encodage)
                 
                 console.log('Modeles charges avec succes');
                 modelsLoaded = true;
