--- a/index1.html
+++ b/index1.html
@@ -352,9 +352,9 @@
 
         // --- 2. INITIALISATION FACE API ---
         Promise.all([
-            faceapi.nets.ssdMobilenetv1.loadFromUri(MODEL_URL), // Détection
-            faceapi.nets.faceLandmark68Net.loadFromUri(MODEL_URL), // Points du visage
-            faceapi.nets.faceRecognitionNet.loadFromUri(MODEL_URL) // Reconnaissance (Encodage)
+            faceapi.nets.ssd_mobilenetv1_model.loadFromUri(MODEL_URL), // Détection
+            faceapi.nets.face_Landmark_68_model.loadFromUri(MODEL_URL), // Points du visage
+            faceapi.nets.face_recognition_model.loadFromUri(MODEL_URL) // Reconnaissance (Encodage)
         ]).then(startApp).catch(err => {
             console.error(err);
             document.getElementById('loader').innerHTML = `<p class="text-red-500 text-center px-4">Erreur: Impossible de charger les modèles IA depuis le CDN.<br>Vérifiez votre connexion internet.</p>`;
